--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.clojars.ndimiduk</groupId>
+            <groupId>org.gavaghan</groupId>
             <artifactId>geodesy</artifactId>
-            <version>1.1.1</version>
+            <version>1.1.3</version>
         </dependency>
 
         <dependency>
