--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ cache:
 before_cache:
   - rm -rf $HOME/.m2/repository/org/marsik
 
+after_success:
+  - "openssl aes-256-cbc -K $encrypted_c29da3852e9b_key -iv $encrypted_c29da3852e9b_iv -in settings-travis.xml.enc -out settings-travis.xml -d"
+  - "[[ $TRAVIS_BRANCH == \"master\" ]] && mvn clean deploy --settings settings-travis.xml -DskipTests=true -B"
