--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: java
+dist: xenial
 jdk:
-  - oraclejdk8
-addons:
-  apt:
-    packages:
-      # Use newer Java (1.8.0_31 is too old)
-      - oracle-java8-installer
+  - openjdk8
 cache:
   directories:
     - $HOME/.m2
